tests/errors/expressions.c
void print_int(int c);
void print_char(char c);
void print_string(char *);
int scan_int();
int fun;
int sum(int a,int b){
    return a+b;
}
int main(){
    int b,c,d,e,f;
    int arr[2.4];
    a=4;
    c=b[5]+fun();
    d=sum();
    d=sum(a,b,c);
    d=sum(&b,c);


    return 0
}